# noiseRecon

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  cpp-ci.yml
src/: config.h  main.cpp
src/experiments/: experimentRunner.cpp  experimentRunner.h
src/field/: field.cpp  field.h
src/forward/: projection.cpp  projection.h
src/noise/: noiseModel.cpp  noiseModel.h
src/reconstruction/: reconstructor.cpp  reconstructor.h
src/visualize/: visualizer.cpp  visualizer.h
